# rra-population-model

./: .cruft.json  .gitignore  README.md  mkdocs.yml  pyproject.toml  pyproject.toml.rej
.github/workflows/: cookiecutter.yml
docs/: file_layout.md
lightning_logs/version_0/: hparams.yaml
lightning_logs/version_1/: hparams.yaml
lightning_logs/version_10/: hparams.yaml
lightning_logs/version_11/: hparams.yaml
lightning_logs/version_12/: hparams.yaml
lightning_logs/version_13/: hparams.yaml
lightning_logs/version_15/: hparams.yaml
lightning_logs/version_16/: hparams.yaml
lightning_logs/version_17/: hparams.yaml
lightning_logs/version_18/: hparams.yaml
lightning_logs/version_19/: hparams.yaml
lightning_logs/version_2/: hparams.yaml
lightning_logs/version_23/: hparams.yaml
lightning_logs/version_25/: hparams.yaml
lightning_logs/version_26/: hparams.yaml
lightning_logs/version_28/: hparams.yaml
lightning_logs/version_3/: hparams.yaml
lightning_logs/version_30/: hparams.yaml
lightning_logs/version_31/: hparams.yaml
lightning_logs/version_32/: hparams.yaml
lightning_logs/version_34/: hparams.yaml
lightning_logs/version_35/: hparams.yaml
lightning_logs/version_37/: hparams.yaml
lightning_logs/version_38/: hparams.yaml
lightning_logs/version_39/: hparams.yaml
lightning_logs/version_4/: hparams.yaml
lightning_logs/version_41/: hparams.yaml
lightning_logs/version_44/: hparams.yaml
lightning_logs/version_45/: hparams.yaml
lightning_logs/version_46/: hparams.yaml
lightning_logs/version_47/: hparams.yaml
lightning_logs/version_49/: hparams.yaml
lightning_logs/version_5/: hparams.yaml
lightning_logs/version_50/: hparams.yaml
lightning_logs/version_51/: hparams.yaml
lightning_logs/version_52/: hparams.yaml
lightning_logs/version_53/: hparams.yaml
lightning_logs/version_54/: hparams.yaml
lightning_logs/version_55/: hparams.yaml
lightning_logs/version_56/: hparams.yaml
lightning_logs/version_57/: hparams.yaml
lightning_logs/version_58/: hparams.yaml
lightning_logs/version_59/: hparams.yaml
lightning_logs/version_6/: hparams.yaml
lightning_logs/version_60/: hparams.yaml
lightning_logs/version_61/: hparams.yaml
lightning_logs/version_62/: hparams.yaml
lightning_logs/version_63/: hparams.yaml
lightning_logs/version_64/: hparams.yaml
lightning_logs/version_65/: hparams.yaml
lightning_logs/version_66/: hparams.yaml
lightning_logs/version_67/: hparams.yaml
lightning_logs/version_68/: hparams.yaml
lightning_logs/version_69/: hparams.yaml
lightning_logs/version_7/: hparams.yaml
lightning_logs/version_70/: hparams.yaml
lightning_logs/version_71/: hparams.yaml
lightning_logs/version_72/: hparams.yaml
lightning_logs/version_8/: hparams.yaml
lightning_logs/version_9/: hparams.yaml
scripts/: cache_raking_data.py  cache_raking_data_requirements.txt  save_early_access_countries.py
specifications/: model_specification.yaml
src/rra_population_model/: cli.py  cli_options.py  constants.py  data.py
src/rra_population_model/figures/: diagnostics.py  plot_utils.py
src/rra_population_model/model/: __init__.py  inference.py  train.py
src/rra_population_model/model/inference/: runner.py
src/rra_population_model/model/modeling/: __init__.py  datamodel.py  datasets.py  metrics.py  model.py  splits.py  transformations.py
src/rra_population_model/model/train/: runner.py  utils.py
src/rra_population_model/model_prep/: __init__.py
src/rra_population_model/model_prep/features/: built.py  metadata.py  ntl.py  overture.py  runner.py  utils.py
src/rra_population_model/model_prep/modeling_frame/: runner.py  utils.py
src/rra_population_model/model_prep/training_data/: metadata.py  runner.py  utils.py
src/rra_population_model/postprocess/: __init__.py  compile_results.py  make_raking_data.py  rake.py  rake_itu.py  utils.py
src/rra_population_model/postprocess/mosaic/: runner.py  utils.py
src/rra_population_model/postprocess/rake/: runner.py
src/rra_population_model/postprocess/raking_factors/: runner.py
src/rra_population_model/postprocess/upsample/: runner.py
src/rra_population_model/preprocess/: README.md  __init__.py  census_data.py  modeling_frame.py  plot_census.py  plot_training_data.py  summarize_training_data.py  training_data.py
src/rra_population_model/preprocess/census_data/: runner.py  utils.py
src/rra_population_model/preprocess/features/: runner.py  utils.py
src/rra_population_model/preprocess/raking_data/: metadata.py  runner.py  utils.py
src/rra_population_model/validate/: __init__.py
src/rra_population_model/validate/metrics/: runner.py
tests/: test_rra_population_model.py
